--- a/src/Styles/HomePage.css
+++ b/src/Styles/HomePage.css
@@ -6,6 +6,7 @@
   height: 100vh;
   background-size: cover;
   background-position: center;
+  background-image: url('../images/loginback.jpg');
 }
 
 .homepage-title {
