--- a/src/Styles/HomePage.css
+++ b/src/Styles/HomePage.css
@@ -1,25 +1,38 @@
 .homepage-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   height: 100vh;
+}
+
+.background-image {
+  width: 50%;
+  height: 100%;
+  background-image: url('../images/img4.jpg');
   background-size: cover;
   background-position: center;
-  background-image: url('../images/img3.jpg');
+}
+
+.content-container {
+  width: 50%;
+  padding: 20px;
+  text-align: center;
 }
 
 .homepage-title {
-  font-size: 36px;
+  font-size: 42px;
   font-weight: bold;
-  margin-bottom: 20px;
-  text-align: center;
+  margin-bottom: 45px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .login-buttons-container {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 20px;
+  overflow-y: hidden;
 }
 
 .login-button {
@@ -28,21 +41,37 @@
   border: none;
   border-radius: 5px;
   padding: 15px 30px;
-  font-size: 18px;
+  font-size: 20px;
   cursor: pointer;
-  margin: 10px;
+  transition: transform 0.3s ease, background-color 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+/* .login-button:hover {
+  transform: scale(1.05);
+  background-color: #0056b3;
+} */
 
 .login-button.student-button {
-  background-color: #4caf50;
+  background-color: #3b4773;
 }
+
+/* .login-button.student-button:hover {
+  background-color: #295371;
+} */
 
 .login-button.faculty-button {
-  background-color: #f44336;
+  background-color: #3b4773;
 }
 
+/* .login-button.faculty-button:hover {
+  background-color: #1c0b46;
+} */
+
 .logo {
-  width: 50px;
-  height: 50px;
-  margin-right: 10px;
+  width: 32px;
+  height: 32px;
+  margin-right: 15px;
 }
