--- a/src/Styles/Fdashboard.css
+++ b/src/Styles/Fdashboard.css
@@ -119,7 +119,6 @@
   transition: background-color 0.3s;
 }
 
-
 .message {
   margin-top: 1rem;
   color: #d9534f; /* Red color for error messages */
@@ -320,4 +319,56 @@
 .search-input:focus {
   border-color: #007bff;
   outline: none;
+}
+
+/* Styles for create assignment form */
+.create-assignment-form {
+  margin-top: 2rem;
+  padding: 1rem;
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.create-assignment-form h2 {
+  margin-bottom: 1rem;
+  color: #070707;
+}
+
+.create-assignment-form form {
+  display: flex;
+  flex-direction: column;
+}
+
+.create-assignment-form .form-group {
+  margin-bottom: 1rem;
+}
+
+.create-assignment-form .form-input {
+  padding: 0.5rem;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.create-assignment-form .form-button-group {
+  display: flex;
+  justify-content: space-between;
+}
+
+.create-assignment-form .form-button {
+  padding: 0.5rem 1rem;
+  background-color: #050605;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.create-assignment-form .form-button-group .form-button {
+  margin-right: 10px; /* Space between buttons */
+}
+
+.create-assignment-form .form-button-group .form-button:last-child {
+  margin-right: 0; /* Remove margin from the last button */
 }
