--- a/src/Styles/HomePage.css
+++ b/src/Styles/HomePage.css
@@ -1,3 +1,5 @@
+/* The provided CSS code defines the styles for various elements of a webpage. Here's a breakdown of
+what each part of the code is doing: */
 .homepage-container {
   display: flex;
   flex-direction: row;
